refactor(racingcar): 불필요한 코드 단축
lamda 표현식 단축, 매직 넘버 처리